--- a/PizzaHut/src/main/webapp/index.html
+++ b/PizzaHut/src/main/webapp/index.html
@@ -122,10 +122,11 @@
 			<span id="sizeMessage"></span>
 		</div>
 		<div class="form-group">
-			<!-- <label for="text">Enter Location</label> <input type="text"
+			<label for="text">Enter Location</label> 
+			<!--  <input type="text"
 				name="location" id="location" class="form-control"
-				placeholder="Enter Location" cols="10" rows="5"> --> 
-				<textarea cols="10" rows="5" class="form-control" name="location" id="location"></textarea>
+				placeholder="Enter Location" cols="10" rows="5"> -->
+				<textarea cols="10" rows="5" class="form-control" name="location" id="location" placeholder="Enter Location"></textarea>
 				<span id="locationMessage"></span>
 		</div>
 		<div class="form-group">
