--- a/Tablet/src/main/webapp/index.html
+++ b/Tablet/src/main/webapp/index.html
@@ -3,62 +3,70 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Medicine</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
 </head>
 <body>
 
-<form name="tablet" action="sending" method="post">
+	<form name="tablet" action="sending" method="post">
 
-<div class="form-group">
-<label for="tabletName">Tablet Name</label>
-<input type="text" name="tabletName" id="tabletName" placeholder="Enter Tablet Name" class="form-control">
-<span id="tabletNameMessage"></span>
-</div>
+		<div class="form-group">
+			<label for="text">Id</label> <input type="number" name="id" id="id"
+				class="form-control" placeholder="Enter id">
+		</div>
 
-<div class="form-group">
-<label for="tabletDosage">Select Tablet Dosage</label>
-<select name="dosage" id="tabletDosage">
-    <option value="0">--Select TabletDosage--</option>
-                    <option>650mg</option>
-                    <option>500mg</option>
-                    <option>1000mg</option>
-                    <option>5mg</option>
-                    <option>250mg</option>
-                    <option>50mg</option>
-</select>
-<span id="dosageMessage"></span>
-</div>
+		<div class="form-group">
+			<label for="tabletName">Tablet Name</label> <input type="text"
+				name="tabletName" id="tabletName" placeholder="Enter Tablet Name"
+				class="form-control"> <span id="tabletNameMessage"></span>
+		</div>
 
-<div class="form-group">
-      <label for="date">Select Manufacturing Date</label>
-      <input type="date" id="date" name="date" placeholder="dd-mm-yyyy" class="form-control">
-      <span id="dateMessage"></span>
-</div>
+		<div class="form-group">
+			<label for="tabletDosage">Select Tablet Dosage</label> <select
+				name="dosage" id="tabletDosage">
+				<option value="0">--Select TabletDosage--</option>
+				<option>650mg</option>
+				<option>500mg</option>
+				<option>1000mg</option>
+				<option>5mg</option>
+				<option>250mg</option>
+				<option>50mg</option>
+			</select> <span id="dosageMessage"></span>
+		</div>
 
-<div class="form-group">
-<label for="type">Tablet Type</label>
-<input type="text" name="type" id="type" class="form-control" placeholder="Enter Tablet Type">
-<span id="typeMessage"></span> 
-</div>
+		<div class="form-group">
+			<label for="date">Select Manufacturing Date</label> <input
+				type="date" id="date" name="date" placeholder="dd-mm-yyyy"
+				class="form-control"> <span id="dateMessage"></span>
+		</div>
 
-<div class="form-group">
-<label for="companyName">Tablet Company Name</label>
-<input type="text" name="companyName" id="companyName" class="form-control" placeholder="Enter CompanyName">
-<span id="companyNameMessage"></span>
-</div>
+		<div class="form-group">
+			<label for="type">Tablet Type</label> <input type="text" name="type"
+				id="type" class="form-control" placeholder="Enter Tablet Type">
+			<span id="typeMessage"></span>
+		</div>
 
-<div class="form-group">
-      <label for="expiringDate">Select Expiring Date</label>
-      <input type="date" id="expiringDate" name="expiringDate" placeholder="dd-mm-yyyy" class="form-control">
-      <span id="expiringDateMessage"></span>
-</div>
+		<div class="form-group">
+			<label for="companyName">Tablet Company Name</label> <input
+				type="text" name="companyName" id="companyName" class="form-control"
+				placeholder="Enter CompanyName"> <span
+				id="companyNameMessage"></span>
+		</div>
 
-<button type="submit"  class="btn btn-success"  onclick="submit()" id="subButton">Submit</button>
+		<div class="form-group">
+			<label for="expiringDate">Select Expiring Date</label> <input
+				type="date" id="expiringDate" name="expiringDate"
+				placeholder="dd-mm-yyyy" class="form-control"> <span
+				id="expiringDateMessage"></span>
+		</div>
 
-</form>
+		<button type="submit" class="btn btn-success" onclick="submit()"
+			id="subButton">Submit</button>
 
-<script type="text/javascript">
+	</form>
+
+	<script type="text/javascript">
 
 document.tablet.addEventListener('submit', function (e) {
     // prevent the form from submitting
@@ -141,6 +149,6 @@ document.tablet.addEventListener('submit', function (e) {
 	   }
 }
 
-</script>	
+</script>
 </body>
 </html>
