--- a/Buzzer/src/main/webapp/index.html
+++ b/Buzzer/src/main/webapp/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
   <h1>Buzzer generates sound</h1>
-  <form action="send" method="get">
+  <form action="send" method="post">
+  UserName
+  <input type="text" value="name">
+  Password
+  <input type="text" value="password">
   <input type="submit" value="submit">
   <input type="submit" value="submit">
   <input type="submit" value="submit">
